# GPDA

./: README.md
Aries/unixODBC-2.2.3/: AUTHORS  ChangeLog  INSTALL  Makefile  Makefile.am  Makefile.in  NEWS  README.OSX  README.QNX  README.VMS  acinclude.m4  aclocal.m4  config.cache  config.status  configure  configure.in  libtool  ltmain.sh  unixODBC.spec  vmsbuild.com
Aries/unixODBC-2.2.3/DRVConfig/: Makefile  Makefile.am  Makefile.in
Aries/unixODBC-2.2.3/DataManager/: Makefile  Makefile.am  Makefile.in  classBrowse.cpp  classDataManager.cpp  classDataSources.cpp  classISQL.cpp  classISQL.h
Aries/unixODBC-2.2.3/DataManagerII/: Makefile  Makefile.am  Makefile.in  classBrowse.cpp  classBrowse.h  classDataManager.cpp  classDataSources.cpp  classISQL.cpp  classISQL.h
Aries/unixODBC-2.2.3/DriverManager/: DriverManager.exp  Makefile  Makefile.am  Makefile.in  SQLAllocConnect.lo  SQLAllocEnv.lo  SQLAllocHandle.c  SQLAllocHandle.lo  SQLAllocHandleStd.lo  SQLAllocStmt.lo  SQLBindCol.c  SQLBindCol.lo  SQLBindParam.c  SQLBindParam.lo  SQLBindParameter.c  SQLBindParameter.lo  SQLBrowseConnect.c  SQLBrowseConnect.lo  SQLBrowseConnectW.c  SQLBrowseConnectW.lo  SQLBulkOperations.c  SQLBulkOperations.lo  SQLCancel.c  SQLCancel.lo  SQLCloseCursor.c  SQLCloseCursor.lo  SQLColAttribute.c  SQLColAttribute.lo  SQLColAttributeW.c  SQLColAttributeW.lo  SQLColAttributes.c  SQLColAttributes.lo  SQLColAttributesW.c  SQLColAttributesW.lo  SQLColumnPrivileges.c  SQLColumnPrivileges.lo  SQLColumnPrivilegesW.c  SQLColumnPrivilegesW.lo  SQLColumns.c  SQLColumns.lo  (+201 more)
Aries/unixODBC-2.2.3/Drivers/: Makefile  Makefile.in
Aries/unixODBC-2.2.3/ODBCConfig/: Makefile  Makefile.am  Makefile.in  main.cpp
Aries/unixODBC-2.2.3/autotest/: Makefile  Makefile.am  Makefile.in  gtrtst.lo  libgtrtst.la  libgtrtstlc.la
Aries/unixODBC-2.2.3/cur/: Makefile  Makefile.am  Makefile.in  SQLAllocHandle.c  SQLAllocHandle.lo  SQLAllocHandleStd.lo  SQLAllocStmt.c  SQLAllocStmt.lo  SQLBindCol.c  SQLBindCol.lo  SQLBindParam.lo  SQLBindParameter.lo  SQLCancel.lo  SQLCloseCursor.lo  SQLColAttribute.c  SQLColAttribute.lo  SQLColAttributes.lo  SQLColumnPrivileges.lo  SQLColumns.lo  SQLConnect.c  SQLConnect.lo  SQLCopyDesc.lo  SQLDescribeCol.lo  SQLDescribeParam.lo  SQLEndTran.lo  SQLError.lo  SQLExecDirect.c  SQLExecDirect.lo  SQLExecute.lo  SQLExtendedFetch.c  SQLExtendedFetch.lo  SQLFetch.c  SQLFetch.lo  SQLFetchScroll.c  SQLFetchScroll.lo  SQLForeignKeys.lo  SQLFreeHandle.c  SQLFreeHandle.lo  SQLFreeStmt.c  SQLFreeStmt.lo  (+52 more)
Aries/unixODBC-2.2.3/doc/: Makefile  Makefile.am  Makefile.in
Aries/unixODBC-2.2.3/exe/: Makefile  Makefile.am  Makefile.in  dltest  dltest.c  isql  isql.c  isql.h  isql_axp.opt  iusql  iusql.c  myodbc.ini  mysqlodbc.ini  odbcinst  odbcinst.c
Aries/unixODBC-2.2.3/extras/: Makefile  Makefile.am  Makefile.in  extras.exp  libodbcextras.la  libodbcextraslc.la  strcasecmp.c  strcasecmp.lo  vms.c
Aries/unixODBC-2.2.3/gODBCConfig/: Makefile.in  acconfig.h  aclocal.m4  config.h.in  configure  configure.in  mkinstalldirs
Aries/unixODBC-2.2.3/include/: Makefile  Makefile.in  ini.h  sqltypes.h  sqp.h
Aries/unixODBC-2.2.3/ini/: Makefile  Makefile.am  Makefile.in  _iniDump.c  _iniDump.lo  _iniObjectRead.lo  _iniPropertyRead.lo  _iniScanUntilObject.c  _iniScanUntilObject.lo  iniAllTrim.lo  iniAppend.c  iniAppend.lo  iniClose.lo  iniCommit.c  iniCommit.lo  iniCursor.lo  iniDelete.lo  iniElement.c  iniElement.lo  iniElementCount.lo  iniGetBookmark.lo  iniGotoBookmark.lo  iniObject.lo  iniObjectDelete.lo  iniObjectEOL.lo  iniObjectFirst.lo  iniObjectInsert.lo  iniObjectLast.lo  iniObjectNext.lo  iniObjectSeek.lo  iniObjectSeekSure.lo  iniObjectUpdate.lo  iniOpen.c  iniOpen.lo  iniProperty.lo  iniPropertyDelete.c  iniPropertyDelete.lo  iniPropertyEOL.lo  iniPropertyFirst.lo  iniPropertyInsert.lo  (+10 more)
Aries/unixODBC-2.2.3/libltdl/: Makefile  config.status  libltdlc.la  libtool  ltdl.c  ltdl.lo
Aries/unixODBC-2.2.3/log/: Makefile  Makefile.am  Makefile.in  _logFreeMsg.lo  libloglc.la  logClose.lo  logOn.lo  logOpen.lo  logPopMsg.lo  logPushMsg.c  logPushMsg.lo  logPushMsgv.lo
Aries/unixODBC-2.2.3/lst/: Makefile  Makefile.am  Makefile.in  README  _lstAdjustCurrent.lo  _lstDump.lo  _lstFreeItem.lo  _lstNextValidItem.lo  _lstPrevValidItem.lo  _lstVisible.lo  liblstlc.la  lstAppend.c  lstAppend.lo  lstClose.lo  lstDelete.lo  lstEOL.lo  lstFirst.lo  lstGet.lo  lstGetBookMark.lo  lstGoto.lo  lstGotoBookMark.lo  lstInsert.lo  lstLast.lo  lstNext.lo  lstOpen.lo  lstOpenCursor.lo  lstPrev.lo  lstSeek.lo  lstSeekItem.lo  lstSet.lo  lstSetFreeFunc.lo
Aries/unixODBC-2.2.3/odbcinst/: Makefile  Makefile.am  Makefile.in  ODBCINSTConstructProperties.c  ODBCINSTConstructProperties.lo  ODBCINSTDestructProperties.lo  ODBCINSTSetProperty.lo  ODBCINSTValidateProperties.lo  ODBCINSTValidateProperty.lo  SQLConfigDataSource.c  SQLConfigDataSource.lo  SQLConfigDriver.c  SQLConfigDriver.lo  SQLCreateDataSource.c  SQLCreateDataSource.lo  SQLGetAvailableDrivers.lo  SQLGetConfigMode.c  SQLGetConfigMode.lo  SQLGetInstalledDrivers.c  SQLGetInstalledDrivers.lo  SQLGetPrivateProfileString.c  SQLGetPrivateProfileString.lo  SQLGetTranslator.lo  SQLInstallDriverEx.c  SQLInstallDriverEx.lo  SQLInstallDriverManager.lo  SQLInstallTranslatorEx.lo  SQLInstallerError.lo  SQLManageDataSources.c  SQLManageDataSources.lo  SQLPostInstallerError.c  SQLPostInstallerError.lo  SQLReadFileDSN.c  SQLReadFileDSN.lo  SQLRemoveDSNFromIni.c  SQLRemoveDSNFromIni.lo  SQLRemoveDriver.c  SQLRemoveDriver.lo  SQLRemoveDriverManager.lo  SQLRemoveTranslator.lo  (+25 more)
Aries/unixODBC-2.2.3/odbcinstQ/: CAbout.cpp  CAbout.h  CCredits.cpp  CDLL.cpp  CDSNList.cpp  CDrivers.cpp  CDrivers.h  CFileDSN.cpp  CProperties.cpp  CStats.cpp  CSystemDSN.cpp  CTracing.cpp  CUserDSN.cpp  Makefile  Makefile.am  Makefile.in  README
Aries/unixODBC-2.2.3/odbctest/: Makefile  Makefile.am  Makefile.in  attr.cpp  conn.cpp  env.cpp  results.cpp  tools.cpp  tools.h
Aries/unixODBC-2.2.3/samples/: Makefile  Makefile.am  Makefile.in  boundparam.lo  cboundtimestampparam.lo  cursor.c  helper.lo  (+1 more)
(+8814 files in other folders)
