SUBDIRS = \
    extras \
    log \
	lst \
	ini \
    libltdl \
	odbcinst \
	DriverManager \
	odbcinstQ \
	sqp \
	exe \
	cur \
	DRVConfig \
	Drivers \
	include \
	doc \
	ODBCConfig \
	DataManager \
	DataManagerII \
	odbctest \
	autotest \
    samples 

EXTRA_DIST = \
	README.GTK \
	gODBCConfig/Makefile.in \
	gODBCConfig/README \
	gODBCConfig/stamp-h.in \
	gODBCConfig/ABOUT-NLS \
	gODBCConfig/AUTHORS \
	gODBCConfig/COPYING \
	gODBCConfig/ChangeLog \
	gODBCConfig/INSTALL \
	gODBCConfig/Makefile.am \
	gODBCConfig/NEWS \
	gODBCConfig/acconfig.h \
	gODBCConfig/aclocal.m4 \
	gODBCConfig/autogen.sh \
	gODBCConfig/config.h.in \
	gODBCConfig/configure \
	gODBCConfig/configure.in \
	gODBCConfig/install-sh \
	gODBCConfig/missing \
	gODBCConfig/mkinstalldirs \
	gODBCConfig/intl/ChangeLog \
	gODBCConfig/intl/Makefile.in \
	gODBCConfig/intl/linux-msg.sed \
	gODBCConfig/intl/po2tbl.sed.in \
	gODBCConfig/intl/xopen-msg.sed \
	gODBCConfig/intl/gettext.h \
	gODBCConfig/intl/gettextP.h \
	gODBCConfig/intl/hash-string.h \
	gODBCConfig/intl/libgettext.h \
	gODBCConfig/intl/loadinfo.h \
	gODBCConfig/intl/bindtextdom.c \
	gODBCConfig/intl/dcgettext.c \
	gODBCConfig/intl/dgettext.c \
	gODBCConfig/intl/gettext.c \
	gODBCConfig/intl/finddomain.c \
	gODBCConfig/intl/loadmsgcat.c \
	gODBCConfig/intl/localealias.c \
	gODBCConfig/intl/textdomain.c \
	gODBCConfig/intl/l10nflist.c \
	gODBCConfig/intl/explodename.c \
	gODBCConfig/intl/intl-compat.c \
	gODBCConfig/intl/cat-compat.c \
	gODBCConfig/intl/VERSION \
	gODBCConfig/po/ChangeLog \
	gODBCConfig/po/Makefile.in.in \
	gODBCConfig/po/POTFILES.in \
	gODBCConfig/po/gODBCConfig.pot \
	gODBCConfig/po/stamp-cat-id \
	gODBCConfig/po/cat-id-tbl.c \
	gODBCConfig/macros/Makefile.in \
	gODBCConfig/macros/Makefile.am \
	gODBCConfig/macros/aclocal-include.m4 \
	gODBCConfig/macros/compiler-flags.m4 \
	gODBCConfig/macros/curses.m4 \
	gODBCConfig/macros/gnome-bonobo-check.m4 \
	gODBCConfig/macros/gnome-fileutils.m4 \
	gODBCConfig/macros/gnome-ghttp-check.m4 \
	gODBCConfig/macros/gnome-gnorba-check.m4 \
	gODBCConfig/macros/gnome-guile-checks.m4 \
	gODBCConfig/macros/gnome-libgtop-check.m4 \
	gODBCConfig/macros/gnome-objc-checks.m4 \
	gODBCConfig/macros/gnome-orbit-check.m4 \
	gODBCConfig/macros/gnome-print-check.m4 \
	gODBCConfig/macros/gnome-pthread-check.m4 \
	gODBCConfig/macros/gnome-support.m4 \
	gODBCConfig/macros/gnome-undelfs.m4 \
	gODBCConfig/macros/gnome-vfs.m4 \
	gODBCConfig/macros/gnome-x-checks.m4 \
	gODBCConfig/macros/gnome-xml-check.m4 \
	gODBCConfig/macros/gnome.m4 \
	gODBCConfig/macros/gperf-check.m4 \
	gODBCConfig/macros/linger.m4 \
	gODBCConfig/macros/need-declaration.m4 \
	gODBCConfig/macros/gnome-common.m4 \
	gODBCConfig/macros/autogen.sh \
	gODBCConfig/src/Makefile.in \
	gODBCConfig/src/Makefile.am \
	gODBCConfig/src/main.c \
	gODBCConfig/src/support.c \
	gODBCConfig/src/support.h \
	gODBCConfig/src/odbcconfig.c \
	gODBCConfig/src/odbcconfig.h \
	gODBCConfig/src/interface.h \
	gODBCConfig/src/callbacks.c \
	gODBCConfig/src/callbacks.h \
	gODBCConfig/pixmaps/computer.xpm \
	gODBCConfig/pixmaps/driver.xpm \
	gODBCConfig/pixmaps/info.xpm \
	gODBCConfig/pixmaps/person.xpm \
	gODBCConfig/pixmaps/server.xpm \
	gODBCConfig/pixmaps/trace.xpm \
	unixODBC.spec \
	README.OSX \
	README.VMS \
	README.QNX \
	README.AIX \
	vms/install_image.com \
	vms/odbc2_axp.opt \
	vms/odbc_axp.opt \
	vms/odbcinst_axp.opt \
	vms/drivermanager_axp.opt \
	vms/isql_axp.opt \
	vmsbuild.com \
	Drivers/MySQL/configure \
	Drivers/MySQL/Makefile.in \
	Drivers/MySQL/myconf.h.in \
	Drivers/MySQL/aclocal.m4 \
	Drivers/MySQL/COPYING \
	Drivers/MySQL/ChangeLog \
	Drivers/MySQL/ChangeSet \
	Drivers/MySQL/INSTALL \
	Drivers/MySQL/Makefile.am \
	Drivers/MySQL/README \
	Drivers/MySQL/RELEASE-NOTES \
	Drivers/MySQL/WIN-Makefile \
	Drivers/MySQL/WIN-Makefile_debug \
	Drivers/MySQL/acconfig.h \
	Drivers/MySQL/acinclude.m4 \
	Drivers/MySQL/catalog.c \
	Drivers/MySQL/config.guess \
	Drivers/MySQL/config.sub \
	Drivers/MySQL/configure.in \
	Drivers/MySQL/connect.c \
	Drivers/MySQL/cursor.c \
	Drivers/MySQL/dialogs.h \
	Drivers/MySQL/dll.c \
	Drivers/MySQL/error.c \
	Drivers/MySQL/error.h \
	Drivers/MySQL/execute.c \
	Drivers/MySQL/handle.c \
	Drivers/MySQL/info.c \
	Drivers/MySQL/install-sh \
	Drivers/MySQL/iodbc.ini \
	Drivers/MySQL/ltconfig \
	Drivers/MySQL/ltmain.sh \
	Drivers/MySQL/makerpm.sh \
	Drivers/MySQL/misc.c \
	Drivers/MySQL/missing \
	Drivers/MySQL/mkinstalldirs \
	Drivers/MySQL/my3dsn.hlp \
	Drivers/MySQL/myodbc3.c \
	Drivers/MySQL/myodbc3.def \
	Drivers/MySQL/myodbc3.dsp \
	Drivers/MySQL/myodbc3.dsw \
	Drivers/MySQL/myodbc3.h \
	Drivers/MySQL/myodbc3.rc \
	Drivers/MySQL/myodbc3.rsp \
	Drivers/MySQL/myodbc3.spec.sh \
	Drivers/MySQL/myutil.h \
	Drivers/MySQL/odbc.ini \
	Drivers/MySQL/options.c \
	Drivers/MySQL/prepare.c \
	Drivers/MySQL/resource.h \
	Drivers/MySQL/results.c \
	Drivers/MySQL/setup.c \
	Drivers/MySQL/stamp-h.in \
	Drivers/MySQL/transact.c \
	Drivers/MySQL/utility.c \
	Drivers/MySQL/Docs/Makefile.am \
	Drivers/MySQL/Docs/faq.texi \
	Drivers/MySQL/Docs/manual.texi \
	Drivers/MySQL/Docs/Support/generate-Images \
	Drivers/MySQL/Docs/Support/test-make-manual \
	Drivers/MySQL/Docs/Support/test-make-faq \
	Drivers/MySQL/Docs/Support/texi2html \
	Drivers/MySQL/samples/Makefile.in \
	Drivers/MySQL/samples/Makefile.am \
	Drivers/MySQL/samples/WIN-Makefile \
	Drivers/MySQL/samples/my_basics.c \
	Drivers/MySQL/samples/my_connect.c \
	Drivers/MySQL/samples/my_cursor.c \
	Drivers/MySQL/samples/my_param.c \
	Drivers/MySQL/samples/my_result.c \
	Drivers/MySQL/samples/my_tran.c \
	Drivers/MySQL/samples/my_utility.h 

install-data-am:
	touch ${sysconfdir}/odbcinst.ini
	touch ${sysconfdir}/odbc.ini
	-mkdir -p ${sysconfdir}/ODBCDataSources
	-chmod 0777 ${sysconfdir}/ODBCDataSources
