dnl Process this file with autoconf to produce a configure script.

AC_INIT()

dnl Checks for programs.
AC_PROG_CC
AC_PROG_RANLIB

dnl Checks for libraries.

dnl Checks for header files.

dnl Checks for typedefs, structures, and compiler characteristics.

AC_CHECK_SIZEOF(short int, 0)
AC_CHECK_SIZEOF(int, 0)
AC_CHECK_SIZEOF(long int, 0)
AC_CHECK_SIZEOF(long long int, 0)

dnl Checks for library functions.

AC_CONFIG_HEADER(src/conf.h)

echo "Isearch configuration complete."
